--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 
     <h1>꽃이 만발한 아름다운 봄이예요!</h1>
     <p>2025-04-11 금요일</p>
+    <p>주말에는 벚꽃 구경하러 다녀오세요~~~</p>
 
     <img src="https://flexible.img.hani.co.kr/flexible/normal/860/537/imgdb/original/2025/0227/20250227502547.jpg" alt="벚꽃풍경">
 
